--- a/package.json
+++ b/package.json
@@ -12,21 +12,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
+    "@sanity/client": "^7.4.0",
+    "@sanity/image-url": "^1.1.0",
     "bootstrap": "^5.3.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.11.3",
+    "highlight.js": "^11.11.1",
     "interweave": "^13.1.1",
     "lodash": "^4.17.21",
     "next": "14.2.25",
+    "next-sanity": "^9.12.0",
+    "next-sanity-image": "^6.2.0",
     "react": "^18.3.1",
     "react-compare-slider": "^3.1.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-highlight": "^0.15.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "@types/react-highlight": "^0.12.8",
     "@types/react-slick": "^0.23.13",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
