Support sanity preview mode + static generation + styles

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 
 NEXT_PUBLIC_SANITY_PROJECT_ID=<your-project-id>
 NEXT_PUBLIC_SANITY_DATASET=<your-dataset-name>
+NEXT_SANITY_API_TOKEN=<your-project-read-api-key>
+NEXT_SANITY_PREVIEW_SECRET=<your-preview-secret-defined-on-webhooks>
+NEXT_SANITY_REVALIDATE_SECRET=<your-preview-secret-defined-on-webhooks>
