--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_SANITY_DATASET=<your-dataset-name>
 NEXT_SANITY_API_TOKEN=<your-project-read-api-key>
 NEXT_SANITY_PREVIEW_SECRET=<your-preview-secret-defined-on-webhooks>
 NEXT_SANITY_REVALIDATE_SECRET=<your-preview-secret-defined-on-webhooks>
+KIT_API_KEY=
