--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ NEXT_SANITY_API_TOKEN=<your-project-read-api-key>
 NEXT_SANITY_PREVIEW_SECRET=<your-preview-secret-defined-on-webhooks>
 NEXT_SANITY_REVALIDATE_SECRET=<your-preview-secret-defined-on-webhooks>
 KIT_API_KEY=
+KIT_FORM_ID=
