--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@sanity/image-url": "^1.1.0",
     "bootstrap": "^5.3.2",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.11.3",
+    "framer-motion": "12.11.3",
     "highlight.js": "^11.11.1",
     "interweave": "^13.1.1",
     "lodash": "^4.17.21",
