--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ NEXT_PUBLIC_SANITY_DATASET=<your-dataset-name>
 NEXT_SANITY_API_TOKEN=<your-project-read-api-key>
 NEXT_SANITY_PREVIEW_SECRET=<your-preview-secret-defined-on-webhooks>
 NEXT_SANITY_REVALIDATE_SECRET=<your-preview-secret-defined-on-webhooks>
+OPENAI_API_KEY=
 KIT_API_KEY=
 KIT_FORM_ID=
