--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "next": "14.2.25",
     "next-sanity": "^9.12.0",
     "next-sanity-image": "^6.2.0",
+    "openai": "^5.8.2",
     "react": "^18.3.1",
     "react-compare-slider": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-highlight": "^0.15.0",
+    "react-is": "^19.1.0",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
