--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.4.0",
     "@sanity/image-url": "^1.1.0",
+    "@sentry/nextjs": "^9.37.0",
     "@types/mdast": "^4.0.4",
     "bootstrap": "^5.3.2",
     "clsx": "^2.1.1",
