--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.18",
     "unified": "^11.0.5",
-    "unist-util-visit": "^5.0.0"
+    "unist-util-visit": "^5.0.0",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
