--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-compare-slider": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-highlight": "^0.15.0",
+    "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-player": "^3.0.0",
