--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.0.3",
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.4.0",
     "@sanity/image-url": "^1.1.0",
@@ -21,6 +24,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "12.11.3",
+    "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
     "interweave": "^13.1.1",
     "lodash": "^4.17.21",
